--- a/AkremiMohyEddine.htm
+++ b/AkremiMohyEddine.htm
@@ -31,7 +31,7 @@
             <li><a class="dropdown-item" href="es1.htm">Es 1 Input</a></li>
             <li><a class="dropdown-item" href="es2.htm">Es 1 While</a></li>
             <li><a class="dropdown-item" href="es3.htm">Es 1 While</a></li>
-            <li><a class="dropdown-item" href="es4.htm">Es 4 ciclo For</a></li>
+            <li><a class="dropdown-item" href="es4.htm">Es 4 Ciclo For</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
