--- a/AkremiMohyEddine.htm
+++ b/AkremiMohyEddine.htm
@@ -37,7 +37,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          <a class="nav-link grafica" href="Grafica1.htm">Grafica JS</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
