--- a/AkremiMohyEddine.htm
+++ b/AkremiMohyEddine.htm
@@ -37,7 +37,13 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link grafica" href="Grafica1.htm">Grafica JS</a>
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Grafica JS
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="Grafica1.htm">Grafica n.1</a></li>
+          
+          </ul>
         </li>
       </ul>
       <form class="d-flex" role="search">
