--- a/AkremiMohyEddine.htm
+++ b/AkremiMohyEddine.htm
@@ -38,11 +38,12 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Grafica JS
+            Grafica Js
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="Grafica1.htm">Grafica n.1</a></li>
-          
+            <li><a class="dropdown-item" href="#">Es Grafica 1</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
       </ul>
