--- a/AkremiMohyEddine.htm
+++ b/AkremiMohyEddine.htm
@@ -36,16 +36,18 @@
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
-        <li class="nav-item dropdown">
+
+                <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Grafica Js
+            Grafica JS
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Es Grafica 1</a></li>
+            <li><a class="dropdown-item" href="Grafica1.htm">Es Grafica 1</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
+
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
