--- a/AkremiMohyEddine.htm
+++ b/AkremiMohyEddine.htm
@@ -43,6 +43,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="Grafica1.htm">Es Grafica 1</a></li>
+            <li><a class="dropdown-item" href="Grafica2.htm">Es Grafica 2</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
