--- a/Grafica1.htm
+++ b/Grafica1.htm
@@ -7,21 +7,21 @@
     body {
       display: flex;
       flex-wrap: wrap;
-      gap: 2px; /* Margine tra i quadrati per migliorare la visualizzazione */
+      gap: 2px; 
     }
 
     .square {
       width: 10px;
       height: 10px;
-      border: 1px solid #000; /* Colore del bordo (nero nel mio esempio) */
+      border: 1px solid #000; 
     }
 
     .square:nth-child(odd) {
-      background-color: lightblue; /* Colore di sfondo per i quadrati dispari */
+      background-color: lightblue; 
     }
 
     .square:nth-child(even) {
-      background-color: lightcoral; /* Colore di sfondo per i quadrati pari */
+      background-color: lightcoral;
     }
   </style>
 </head>
